--- a/css/style.css
+++ b/css/style.css
@@ -320,8 +320,9 @@
 /* estilos del index */
 #reinicio {
   position: absolute;
-  top: 0;
-  right: 0; }
+  top: 6rem;
+  right: 0;
+  font-size: 1.5rem; }
 
 #h1 {
   margin-top: 2rem;
