cambio de alert por sweet alert y toastify; agregado de varable alt de los objetos de productos y que se renderiza; y empiezo a cambiar estilos de productos

--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,9 @@ a:hover {
 #mainpro {
   display: flex;
   justify-content: left;
-  width: 100%; }
+  width: 100%;
+  min-height: 40vh;
+  align-items: center; }
 
 .mainpro__hijo__img {
   width: 8rem;
