--- a/sass/secundarios/_pro.scss
+++ b/sass/secundarios/_pro.scss
@@ -400,6 +400,8 @@ a:hover {
     display: flex;
     justify-content: left;
     width: 100%;
+    min-height: 40vh;
+    align-items: center;
 }
 
 .mainpro__hijo__img {
