eliminado de la libreria de luxon, archivo antiguo de productos y estlilos innecesarios

--- a/sass/secundarios/_pro.scss
+++ b/sass/secundarios/_pro.scss
@@ -1,283 +1,5 @@
-/* estilo de productos */
-.mainpro {
-    h1 {
-        @include h($medida-3);
-        @include tb($medida-3, $medida-2);
-    }
 
-    .mainpro__contenedorpro {
-        margin-bottom: 6;
-        display: grid;
-        margin: 0rem;
-        width: 100%;
-        grid-template-areas:
-            "hijo1 hijo2"
-            "hijo3 hijo4"
-            "hijo5 hijo6"
-            "hijo7 hijo8"
-            "hijo9 hijo10"
-            "hijo11 hijo12";
-    }
-
-    .mainpro__contenedorpro__hijo1 {
-        grid-area: hijo1;
-        @extend %pro;
-        @extend %imgpm;
-    }
-
-    .mainpro__contenedorpro__hijo2 {
-        grid-area: hijo2;
-        @extend %pro;
-        @extend %imgpm;
-    }
-
-    .mainpro__contenedorpro__hijo3 {
-        grid-area: hijo3;
-        @extend %pro;
-        @extend %imgpm;
-    }
-
-    .mainpro__contenedorpro__hijo4 {
-        grid-area: hijo4;
-        @extend %pro;
-        @extend %imgpm;
-    }
-
-    .mainpro__contenedorpro__hijo5 {
-        grid-area: hijo5;
-        @extend %pro;
-        @extend %imgpm;
-    }
-
-    .mainpro__contenedorpro__hijo6 {
-        grid-area: hijo6;
-        @extend %pro;
-        @extend %imgpm;
-    }
-
-    .mainpro__contenedorpro__hijo7 {
-        grid-area: hijo7;
-        @extend %pro;
-        @extend %imgpm;
-    }
-
-    .mainpro__contenedorpro__hijo8 {
-        grid-area: hijo8;
-        @extend %pro;
-        @extend %imgpm;
-    }
-
-    .mainpro__contenedorpro__hijo9 {
-        grid-area: hijo9;
-        @extend %pro;
-        @extend %imgpm;
-    }
-
-    .mainpro__contenedorpro__hijo10 {
-        @extend %pro;
-        @extend %imgpm;
-    }
-
-    .mainpro__contenedorpro__hijo11 {
-        grid-area: hijo11;
-        @extend %pro;
-        @extend %imgpm;
-    }
-
-    .mainpro__contenedorpro__hijo12 {
-        grid-area: hijo12;
-        @extend %pro;
-        @extend %imgpm;
-    }
-}
-
-/* estilos de la mediaquerie tablet*/
-@media screen and (min-width:576px) {
-    .mainpro {
-        h1 {
-            font-size: $medida-4;
-        }
-
-        .mainpro__contenedorpro {
-            width: auto;
-            display: grid;
-            margin: $medida-3;
-            grid-template-areas:
-                "hijo1 hijo2 hijo3 hijo3"
-                "hijo4 hijo5 hijo3 hijo3"
-                "hijo6 hijo7 hijo8 hijo9"
-                "hijo10 hijo10 hijo11 hijo11"
-                "hijo10 hijo10 hijo12 hijo12";
-        }
-
-        .mainpro__contenedorpro__hijo1 {
-            grid-area: hijo1;
-            @extend %prot;
-            @extend %imgpt;
-        }
-
-        .mainpro__contenedorpro__hijo2 {
-            grid-area: hijo2;
-            @extend %prot;
-            @extend %imgpt;
-        }
-
-        .mainpro__contenedorpro__hijo3 {
-            grid-area: hijo3;
-            @extend %prot;
-
-            img {
-                @include sizes(90%, 20rem);
-            }
-        }
-
-        .mainpro__contenedorpro__hijo4 {
-            grid-area: hijo4;
-            @extend %prot;
-            @extend %imgpt;
-        }
-
-        .mainpro__contenedorpro__hijo5 {
-            grid-area: hijo5;
-            @extend %prot;
-            @extend %imgpt;
-        }
-
-        .mainpro__contenedorpro__hijo6 {
-            grid-area: hijo6;
-            @extend %prot;
-            @extend %imgpt;
-        }
-
-        .mainpro__contenedorpro__hijo7 {
-            grid-area: hijo7;
-            @extend %prot;
-            @extend %imgpt;
-        }
-
-        .mainpro__contenedorpro__hijo8 {
-            grid-area: hijo8;
-            @extend %prot;
-            @extend %imgpt;
-        }
-
-        .mainpro__contenedorpro__hijo9 {
-            grid-area: hijo9;
-            @extend %prot;
-            @extend %imgpt;
-        }
-
-        .mainpro__contenedorpro__hijo10 {
-            grid-area: hijo10;
-            @extend %prot;
-
-            img {
-                @include sizes(60%, 15rem);
-            }
-        }
-
-        .mainpro__contenedorpro__hijo11 {
-            grid-area: hijo11;
-            @extend %prot;
-
-            img {
-                @include sizes(30%, 6rem);
-            }
-        }
-
-        .mainpro__contenedorpro__hijo12 {
-            grid-area: hijo12;
-            @extend %prot;
-
-            img {
-                @include sizes(40%, 6rem);
-            }
-        }
-    }
-}
-
-/* estilos de la mediaquerie desktop*/
-@media screen and (min-width:1000px) {
-    .mainpro {
-        .mainpro__contenedorpro__hijo1 {
-            @extend %imgp;
-            @extend %prod;
-        }
-
-        .mainpro__contenedorpro__hijo2 {
-            @extend %imgp;
-            @extend %prod;
-        }
-
-        .mainpro__contenedorpro__hijo3 {
-            img {
-                @include sizes(90%, 40rem);
-            }
-
-            @extend %prod;
-        }
-
-        .mainpro__contenedorpro__hijo4 {
-            @extend %imgp;
-            @extend %prod;
-        }
-
-        .mainpro__contenedorpro__hijo5 {
-            @extend %imgp;
-            @extend %prod;
-        }
-
-        .mainpro__contenedorpro__hijo6 {
-            @extend %imgp;
-            @extend %prod;
-        }
-
-        .mainpro__contenedorpro__hijo7 {
-            @extend %imgp;
-            @extend %prod;
-        }
-
-        .mainpro__contenedorpro__hijo8 {
-            @extend %imgp;
-            @extend %prod;
-        }
-
-        .mainpro__contenedorpro__hijo9 {
-            @extend %imgp;
-            @extend %prod;
-        }
-
-        .mainpro__contenedorpro__hijo10 {
-            img {
-                @include sizes(60%, 25rem);
-            }
-
-            @extend %prod;
-        }
-
-        .mainpro__contenedorpro__hijo11 {
-            img {
-                @include sizes(30%, 9rem);
-            }
-
-            @extend %prod;
-        }
-
-        .mainpro__contenedorpro__hijo12 {
-            img {
-                @include sizes(40%, 10rem);
-            }
-
-            @extend %prod;
-        }
-    }
-}
-
-.body {
-    width: 100%;
-}
-
-/* estilos del index */
+/* estilos de productos */
 #reinicio {
     position: absolute;
     top: 6rem;
